fixtures/src/invalid/content-duplicate-ids/OEBPS/chapter1.xhtml
<?xml version="1.0" encoding="UTF-8"?>
<!DOCTYPE html>
<html xmlns="http://www.w3.org/1999/xhtml">
<head><title>Chapter 1</title></head>
<body>
  <h1 id="heading">Chapter 1</h1>
  <p id="heading">Hello, world.</p>
</body>
</html>